new page updated

--- a/src/app/newspage/newspage.component.html
+++ b/src/app/newspage/newspage.component.html
@@ -21,6 +21,10 @@
             width="300px"
           />
         </a>
+        <div class='date'>
+          <div class="day">27</div>
+          <div class="month">May</div>
+        </div>
         <div class="card-body">
           <p class="card-title">{{ c.title.substring(0, 30) }}..</p>
           <!-- <p class="card-text">{{ c.content.substring(0, 10) | json }}</p> -->
