--- a/src/app/newspage/newspage.component.css
+++ b/src/app/newspage/newspage.component.css
@@ -6,3 +6,24 @@
   padding: 50px;
   align-items: center;
 }
+@import url('https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap');
+.date{
+  background-color:#e74c3c;
+  height:55px;
+  width:55px;
+  border-radius: 50%;
+  position:absolute;
+  top:10px;
+  left:170px;
+  padding:10px 0px !important;
+}
+.date,.month{
+  font-size:14px;
+  font-family: 'Yeon Sung', cursive;
+  font-weight:bold;
+  margin:0px;
+  padding:0px;
+  color:white;
+  text-align:center;
+  line-height:15px;
+}
